# eme

./: .gitignore  CONTRIBUTING.md  EME_VISION.md  MANIFESTO.md  MESH_GUIDE.md  README.md  app.py  bootstrap_eme.sh  bundle_mobile_core.py  cert.pem  db.sqlite3.bak  debug_sync_dt.py  diagnose_db.py  install_fixed.sh  key.pem  knowledge_base.py  migrate_v2.py  requirements.txt  reseed.py  seed_chat.py  seed_en.py  seed_kb.py  seed_nav.py  seed_uk.py  setup_ssl.py  setup_termux.sh  start.bat  start.sh  test_apis.py  test_console.py  test_mesh_sync_extended.py  test_nav.py  test_render.py  test_screenshot.py  test_sync.py
clone_master/: CLONE_ARCHITECT.md  apps.py  urls.py  views.py
docs/: EME_AI_GUIDE.md
eme/: asgi.py  db_router.py  settings.py  urls.py  wsgi.py
eme_ai/: __init__.py  apps.py  models.py  registry.py  urls.py  views.py
eme_chat/: apps.py  models.py  serializers.py  urls.py  views.py
eme_kb/: apps.py  models.py  serializers.py  urls.py  views.py
eme_mafia/: apps.py  models.py  serializers.py  urls.py  views.py
eme_media/: apps.py  models.py  serializers.py  urls.py  utils.py  views.py
eme_nav/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
eme_utils/: apps.py  middleware.py  models.py  serializers.py  urls.py  views.py
homelab/: docker-compose.yml
mobile/: pyproject.toml
mobile/.briefcase/eme_mobile/dev.cp312-win_amd64/: pyvenv.cfg
mobile/.briefcase/eme_mobile/dev.cp312-win_amd64/Scripts/: activate  activate.bat
mobile/src/eme_mobile/: __main__.py  app.py
mobile/src/eme_mobile.dist-info/: METADATA
(+157 files in other folders)
